ha-addons: add postinstall job to append OpenAI TTS config and restart HA; add RBAC

--- a/hello-chris-ai-homelab/.k8s/ha-addons/kustomization.yaml
+++ b/hello-chris-ai-homelab/.k8s/ha-addons/kustomization.yaml
@@ -4,3 +4,6 @@ namespace: home-assistant
 resources:
   - cm-installer.yaml
   - job.yaml
+  - rbac.yaml
+  - cm-postinstall.yaml
+  - job-postinstall.yaml
