voice: upgrade Whisper to base-int8; add HA API job to automate Wyoming config + default Assist pipeline (token via Secret)

--- a/hello-chris-ai-homelab/.k8s/stt-whisper/deployment.yaml
+++ b/hello-chris-ai-homelab/.k8s/stt-whisper/deployment.yaml
@@ -23,9 +23,14 @@ spec:
         - name: server
           image: rhasspy/wyoming-whisper:latest
           imagePullPolicy: IfNotPresent
+          env:
+            - name: HF_HOME
+              value: /data/hf
+            - name: XDG_CACHE_HOME
+              value: /data
           args:
             - "--model"
-            - "small-int8"
+            - "base-int8"
             - "--language"
             - "en"
             - "--download-dir"
